<resources>
    <string name="app_name">Sikh Gyan</string>
    <string name="contact_us">Contact Me</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="katha1Title">Guru Nanak Dev Ji Grazing Buffaloes</string>
    <string name="Katha11">Guru Nanak Dev Ji’s father once sent Guru Nanak Dev Ji to graze buffaloes in the pastures. While grazing buffaloes, Guru Nanak Dev ji sat under a tree and started meditating on God. Meanwhile, the herd of buffaloes went into the neighboring farmer’s field and destroyed his crop. The farmer saw his crops getting damaged. He became furious and lodged a complaint with Rai Bular, the officer-in-charge of that area. Rai Bular came to inspect the fields, and to his astonishment, he found no damage was done to the crops; rather, the crops were blossoming. The place, at which this miracle took place, is known as Kiara Sahib.</string>
    <string name="Katha12">On another occasion, Guru Nanak Dev Ji was sent to graze the buffaloes in the pastures and he fell asleep under the shade of a tree. As the sun rose higher, the shadow moved away. The rays of the hot summer sun began to fall on Guru Nanak Dev Ji’s face. A big cobra came at that place and provided shadow with its hood over the face of the Divine Master. Rai Bular was going through that area with his attendants. When he saw this strange scene, he was convinced that Guru Nanak Dev Ji is not an ordinary person. God had sent him to this world. Rai Bular then touched the Gurus  feet in great reverence and thus became his disciple.</string>
    <string name="katha2Title">Bhai Lalo and Malik Bhago</string>
    <string name="Katha21">Guru Nanak Dev Ji traveled to a number of places, including Saidpur, now known as Eminabad. Before Guru Ji arrived at Saidpur, the word has spread in the whole city that a holy man is going to visit their town. Malik Bhago was the chief of the town. He was a corrupt person and who had earned a lot of wealth through unfair means. He would charge extra tax to the poor farmers and would take most of their crop, leaving them hungry. He had become a wealthy person by taking other’s belongings. When Malik heard the news of Guru Ji’s arrival, he started preparing for Guru’s stay at his house.</string>
    <string name="Katha22">When Guru Nanak reached Saidpur, he knocked on the door of a poor carpenter named Lalo. Guru Ji chose to stay with Lalo for sometime as a guest. Lalo would serve Guru Ji with little food he could afford and Guru Ji would eat the simple food with love. News reached Malik Bhago that Guru Ji was staying with Lalo. Malik held a big gathering and invited all the holy men including Guru Nanak Dev Ji. Guru Ji did not accept his invitation. </string>
    <string name="Katha23">Malik became very angry that Guru Nanak Dev Ji refused his proposal and ordered to force the Guru to visit his place. Two guards were sent to Lalo’s home to escort Guru Ji. Guru Nanak Ji decided to go visit Malik’s palace. When Guru Ji reached Malik’s palace, Malik Bhago said, “O holy man, I have prepared so many dishes for you, but you are staying with a poor carpenter and eating his dry bread? Why?” </string>
    <string name="Katha24">The Guru replied, "I cannot eat your food because your bread is ill-begotten and has been made with money sucked from the poor through unfair means, while Lalo's bread is made from the hard-earned money.” Malik Bhago very mad after heariong Guru Ji’s remarks and asked Guru Ji to prove his point. Guru Nanak Dev Ji asked for a loaf of bread from Lalo's house. In one hand the Guru held Lalo's dry bread and in the other he held Malik Bhago's bread. Guru Ji then squeezed both breads with his hands. Milk dripped out from Lalo's bread while blood dripped from Malik Bhago's bread. Malik Bhago was completely shaken by his guilt and asked for forgiveness. Guru Ji asked him to distribute his ill-gotten wealth among the poor and henceforth live an honest life. Malik Bhago was re-born with the Guru's blessing. He started living an honest life.</string>
    <string name="katha3Title">Sajjan Rogue</string>
    <string name="katha5Title">Wali Qandhari, the Arrogant Priest</string>
    <string name="Katha51">After traveling through Middle East and many other countries, the Guru reached a place called Hassan Abdal. It is about fifty kilometers from Rawalpindi in Pakistan. Guru Ji stayed at Hassan Abdal near the foothills. People came to know about Guru Ji and began to gather around him. Guru Ji talked to them about God. He told them the greatness of God and His creation. Numerous people began to gather around him every day.</string>
    <string name="Katha52">A Muslim Priest lived on the top of a hill. His name was Bawa Wali Qandhari. His house was near a spring of fresh water. The water flowed down to the town from spring on top of the hill near Wali\'s house. The spring was the only source of water for the town. People relied on the spring to carry their basic needs.</string>
    <string name="Katha53">Wali Qandhari was an arrogant person. When he saw people gathering around Guru Nanak instead of his place, he became very jealous and angry. He stopped the spring water from flowing down to the town. The people became frustrated. How could they and their cattle live without water? A group of them went to Bawa Wali Qandhari and begged him to let the water flow down as before. Bawa Wali Qandhari in full anger said, "Go to your Guru, the one you visit everyday and ask for water from him." The poeple went to the Guru and told him the whole story. Guru Ji said, “Don\'t lose your heart, trust in God. God will not let you die of thirst”. Guru Ji then asked Bhai Mardana to go and appeal to Bawa Wali Qandhari and request him to let the water flow down to the town. When Bhai Mardana went to the top of the hill, Bawa Wali Qandhari shouted angrily, “Go back to your Guru and ask him to give water to the people.”</string>
    <string name="Katha54">Bhai Mardana returned to the Guru and narrated what Bawa Wali Qandhari said to him. The Guru sent him once again but Mardana came back with the same story. People got more and more frustrated each second. The Guru said, “Don\'t lose your heart. God is great and merciful. God can make springs flow from where ever He wishes. Let us all pray to Him.” They all prayed. Then Guru Nanak Dev Ji lifted a stone. At once, a stream of fresh water began to flow from the place Guru lifted the stone.</string>
    <string name="Katha55">At the same time, Bawa Wali Qanhari\'s spring dried up. He was filled with anger and pushed a large rock from the top of the hill towards the Guru. The rock came rolling down towards the Guru. Bawa Wali Qanhari thought that the rock would crush Guru Ji to death but the Guru quietly raised his hand and the rock stopped at the instant it struck Guru\’s hand. Guru ji\’s hand was imprinted on the rock. Bawa Wali Qundhari\'s pride was broken. He came down and fell at the Guru\'s feet. The Guru said, “Rise my friend. Live as devotees of God should live. Be kind and share with everyone” The rock still exists. There is a beautiful Gurdwara at that place called the Panja Sahib.</string>
    <string name="katha14Title">The King and the Queen</string>
    <string name="Katha141">Once there was a king named HariChand in India. "King HariChand had a queen with beautiful eyes, Tara. She had made his home the abode of comforts"  (The Vaars of Bhai Gurdas Ji, 10). She was a devotee of God and she knew the purpose of life. As it written in Guru Granth Sahib, "This human body has been given to you. This is your chance to meet God. All other works are of no use. Join the holy congregation and meditate on the Name of God" (Guru Granth Sahib Ji, 12).</string>
    <string name="Katha142">Every night the queen would leave the king’s palace to join the holy congregation and meditate on God. “She would join the holy congregation and spend the whole night by hearing the holy hymns. After she left, the King awoke in the middle of the night and realized she had gone. He could not find the Queen anywhere and his heart was filled with astonishment” (The Vaars of Bhai Gurdas Ji, 10).</string>
    <string name="Katha143">The King thought that Tara might be cheating on him, not realizing that Tara goes to worship and meditates on God. The queen was a great devotee of God. She would reach the holy congregation, take her sandals off, join the other devotees in worshipping and meditating on God. “The following night he followed the young queen. The queen reached the holy congregation and the King lifted one of her sandals to prove her infidelity” (The Vaars of Bhai Gurdas Ji, 10).</string>
    <string name="Katha144">The king waited outside the place where the congregation was being held. Queen came outside after meditating on God. “Because she had meditated on God in the holy congregation, one sandal became a pair. The king was astonished and realized that her matching sandal was a miracle. King said, I would devote myself to the holy congregation” (The Vaars of Bhai Gurdas Ji, 10). The matching sandal was a result of the miracle performed by God to protect His devotee.</string>
    <string name="katha15Title">Evil Greed</string>
    <string name="Katha151">Once there were four good friends. They were friends from childhood and their friendship was very deep. One day they were going on a journey through a forest. As they were walking, they felt as if something was buried under the ground. They decided to explore it and started digging. After digging, they found a big box, which was full of gold coins.</string>
    <string name="Katha152">They decided to make four parts of the gold coins and distribute it equally among themselves but deep in their hearts each one of them wanted to have the whole box of gold coins. They took the box of gold coins with them but with each step they would take, their desire of having the whole box of gold coins increased. </string>
    <string name="Katha153">The sun was about to set and the four of them decided to take shelter under a tree and have some food followed by sleep and continue their journey the next morning. They sat under the tree and decided that two of them will go in search of food and other two will guard the box. As the first two went in search of the food, they began to talk about that box of gold coins. The first one said that he wants to have as much gold as possible. The second one wanted the same. So after gather some food, an evil thought came in their mind. They added poison to the food so that their other two friends will die and they would share the box and divide the gold half and half. </string>
    <string name="Katha154">On the other end, the other two friends that were guarding the box started to talk about gold. They want the same thing, to have as much as possible. To do so, they made an evil plan too. They sharpened their knives so that when their first two friends will arrive, they would kill them.</string>
    <string name="Katha155">The moment came, their first two friends came with the food, and they placed the food on the box and sat down. As they took their seat, the other two friends with knives beheaded them in a fraction of a second. Their bodies lay dead on the ground. The other two friends were happy that they now would get the half of the gold coins each. Some time passed and they decided to have some food. Few minutes after they ate the poisoned food, their lifeless bodies lay dead on the ground and neither one of them got the gold coins. Moreover, it cost them the loss of their lives.</string>
</resources>