<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:text="@string/katha15Title"
                android:textColor="@color/text_color"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/Katha151"
                android:textSize="17dp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView1"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Katha152"
                android:textSize="17dp" />
            
            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView1"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Katha153"
                android:textSize="17dp" />
            
            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView1"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Katha154"
                android:textSize="17dp" />
            
            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView1"
                android:layout_marginBottom="7dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Katha155"
                android:textSize="17dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>